# ScriptSDK

./: .gitignore  README.md  example.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
lib/: ScriptSDK.d.ts  ScriptSDK.js  ScriptSDK.ts  type.d.ts
lib/src/: enums.ts  groups.ts  sdk.ts
src/endstone_scriptsdk/: __init__.py  handler.py  scriptsdk.py
src/endstone_scriptsdk/src/: utils.py
src/endstone_scriptsdk/src/features/: bossBar.py  clientName.py  entity.py  groups.py  player.py  server.py
src/endstone_scriptsdk/src/libs/: MCBEPing.py
tests/: index.js
