[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-scriptsdk"
version = "0.0.1"
description = "Use certain Endstone features directly on your add-ons. By using a JS file on your add-ons and the Endstone plugin."
dependencies = [
    "colorama>=0.4.6"
]

[project.entry-points."endstone"]
scriptsdk = "endstone_scriptsdk:ScriptSDK"